--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -551,41 +551,6 @@ h3 {
 }
 
 
-/* Сворачивание текста */
-.collapsed_text_wrap {
-	.seo_text_toggle {
-		width: 100%;
-		display: block;
-		border: none;
-		background: none; 
-		position: relative;
-		top: -21px;
-		text-align: center;
-		padding-top: 26px;
-		height: 24px;
-		background-image: linear-gradient(transparent, $bg-main-color, $bg-main-color);
-		&.ff_text_expanded {
-			background-image: none;
-		}
-		span {
-			font-size: 10px;
-		}
-		&:hover {
-			color: $link-color;
-		}
-	}
-	.collapsed_text {
-		overflow: hidden;
-		&.ff_text_collapased {
-			max-height: 76px;
-		}
-		&.ff_text_expanded {
-			height: unset;
-		}
-	}
-}
-
-
 
 /************ INDEX PAGE STRUCTURE **************/
 .ff_container_fluid {
@@ -895,6 +860,7 @@ h3 {
 	display: flex;
 	align-items: center;
     justify-content: center;
+    font-size: $second_size;
 }
 
 /************ INDEX BLOCKS ************/
@@ -2804,16 +2770,6 @@ h3 {
 		border-top: 1px solid $border-bold-color;
 		margin-top: 12px;
 		padding: 0 24px;
-		.seo_text_toggle {
-			top: -48px;
-			padding-top: 64px;
-			height: 41px;
-		}
-		.collapsed_text {
-			&.ff_text_collapased {
-				max-height: 230px;
-			}
-		}
 	}
 }
 @media (max-width: 769px) { 
@@ -3357,9 +3313,6 @@ h3 {
 }
 
 .ff_traders {
-
-	@extend .second_font;
-
 	padding-bottom: 60px;
 
 	.ff_trader_head {
@@ -3486,6 +3439,10 @@ h3 {
 						font-size: 24px;
 						line-height: 32px;
 						color: $link-color;
+
+					}
+					.price_label {
+						font-size: $second_size;
 					}
 				}
 			}
