--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -3928,4 +3928,10 @@ $label-font-size-redo: $default-size;
 
 
 
+.coockie_law_link {
+	color: $bg-main-color;
+	text-decoration: underline;
+}
+
+
 
